# DRS

./: .gitignore  CHANGELOG.md  README.md  ball_detect.py  batsman.py  main.py  pitch.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: README.md
config/: default.yaml  match.example.yaml  match.yaml
config/calibration/: example.json
docs/: BUILD.md  DEPLOYMENT.md  EULA.md  PRIVACY.md  TEST_VIDEOS.md  THIRD_PARTY_NOTICES.md  USER_GUIDE.md
drs/: __init__.py  config.py  engine.py  grounds.py  logging_setup.py  paths.py  pipeline.py  run.py  sources.py  state.py
drs/analysis/: video_trajectory.py
drs/app/: about_dialog.py  advisory_panel.py  advisory_worker.py  branding.py  clip_browser_dialog.py  image_utils.py  live_setup_dialog.py  main.py  main_window.py  pitch_diagram_widget.py  playback_worker.py  settings_dialog.py  setup_wizard.py  theme.qss  timeline_widget.py  video_widget.py
drs/decision/: __init__.py  events.py  verdict.py
drs/detectors/: __init__.py  hybrid.py  model_loader.py  yolo_detector.py
drs/fusion/: calibration.py  multi_view.py  (+1 more)
tests/: conftest.py  synthetic_frames.py  test_advisory_evidence.py  test_advisory_models.py  test_calibration.py  test_confidence_scorer.py  test_config.py  test_delivery_clip.py  test_engine_smoke.py  test_events.py  test_golden_frame.py  test_match_recorder.py  test_ollama_service.py  test_pitch_diagram.py  test_stumps.py  test_verdict.py
tools/: build_installer.ps1  calibrate_pitch.py  export_pitch_diagram.py  fetch_test_videos.py  generate_icon.py  test_video_urls.txt
(+24 files in other folders)
