[project]
name = "drs-pro"
version = "1.0.0"
description = "DRS Pro — LBW decision review assist for club cricket"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DRS" }]

dependencies = [
    "cvzone==1.6.1",
    "numpy==2.2.1",
    "opencv-python==4.10.0.84",
    "pyyaml>=6.0",
    "PySide6>=6.6.0",
    "ultralytics>=8.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyinstaller>=6.0"]

[project.scripts]
drs-pro = "drs.app.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["drs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
